# ustb-16th-ros

./: .gitignore  README.md  changing_planner.md
models/aruco_marker_0/: model.config  model.sdf
models/aruco_marker_0/materials/scripts/: marker.material
models/aruco_marker_1/: model.config  model.sdf
models/aruco_marker_1/materials/scripts/: marker.material
models/aruco_marker_2/: model.config  model.sdf
models/aruco_marker_2/materials/scripts/: marker.material
models/race_end/: model.config  model.sdf
models/race_end/materials/scripts/: marker.material
src/gazebo_pkg/launch/: empty_race_track.launch  example.launch  race.launch
src/gazebo_pkg/urdf/: waking_robot.xacro
src/gazebo_pkg/world/: race.world  race3.world  test_world.world
src/mbot_navigation/launch/: gmapping_demo.launch  nav.launch
src/mbot_navigation/maps/: map.pgm  map.yaml
src/mecanum_sim/nexus_4wd_mecanum_description/launch/: nexus_4wd_mecanum_description.launch
src/mecanum_sim/nexus_4wd_mecanum_description/urdf/: nexus_4wd_mecanum.xacro
src/mecanum_sim/nexus_4wd_mecanum_gazebo/: CMakeLists.txt
src/qr/: CMakeLists.txt  package.xml
src/qr/launch/: qr.launch
src/qr/src/: qr.cpp
src/qr_msgs/: CMakeLists.txt  package.xml
src/qr_msgs/srv/: qr.srv
src/ucar_bringup/: CMakeLists.txt  package.xml
src/ucar_bringup/launch/: No_nav.launch  example_nav.launch  mapping.launch  nav_start.launch  static_tf.launch
src/ucar_commander/: CMakeLists.txt  package.xml
src/ucar_commander/launch/: ucar_commander.launch
src/ucar_commander/scripts/: ucar_commander_node.py
src/ucar_navigation/: CMakeLists.txt  package.xml
src/ucar_navigation/config/: costmap_common_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/ucar_navigation/launch/: gmapping.launch  gmapping_demo.launch  hector.launch  move_base.launch  nav.launch
src/ucar_navigation/maps/: map.pgm  map.yaml
src/ucar_navigation/rviz/: nav.rviz
src/ucar_stopwatch/scripts/: ucar_stopwatch_node.css  ucar_stopwatch_node.py
